--- a/assets/styles.css
+++ b/assets/styles.css
@@ -40,7 +40,6 @@ body {
   border-radius: 50%;
 }
 
-
 .disabledButton {
   background-color: #d8d8d8;
   cursor: not-allowed;
@@ -88,7 +87,7 @@ li {
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.57);
 }
 
-.out-of-stock-img {
+.outOfStockImg {
   opacity: 0.5;
 }
 
